2009-01-29  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/impl/wordrequest.cpp: g++ 4.3 introduced some backwards
	incompatibility <http://gcc.gnu.org/gcc-4.3/porting_to.html> for
	C-functions: #include cstring.
	* src/impl/util.cpp: Likewise.
	* src/impl/baseforms.cpp: Likewise.

2008-02-20  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Require autoconf >= 2.61.

	* Makefile.am: Require automake >= 1.10.

2008-02-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* Makefile.am (AUTOMAKE_OPTIONS): Set to gnu.
	* include/impl/Makefile.am: Likewise.

	* configure.ac: Integrate new boost searching macros.
	* src/impl/Makefile.am: Likewise.

	* m4/boost.m4: Use boost.m4 from http://repo.or.cz/w/boost.m4.git.

2008-01-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/impl/wordnetplugin.cpp: Set plugin name to PACKAGE_TARNAME.

2008-01-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/impl/baseforms.h: Adapt to new dlvhex plugin API.
	* include/impl/wordrequest.h: Likewise.
	* include/impl/util.h: Likewise.
	* src/test/testWordRequest.cpp: Likewise.
	* src/test/testBaseForms.cpp: Likewise.
	* src/impl/wordrequest.cpp: Likewise.
	* src/impl/wordnetplugin.cpp: Likewise.

	* configure.ac: Bump version to 0.3.0.
	Check for boost.
	
	* bootstrap: Rename to boostrap.sh.
	Use autoreconf.

	* AUTHORS: New file.
	* NEWS: Likewise.
	* m4/boost.m4: Likewise.